--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,10 @@
   "type": "library",
   "require": {
     "php": ">=7.2",
-    "ext-json": "*",
-    "phpspec/phpspec": "^5.1"
+    "ext-json": "*"
+  },
+  "require-dev": {
+    "phpspec/phpspec": "^4.0"
   },
   "autoload": {
     "psr-4": {
