Change reference from DomainEvent to Event

--- a/src/DDDHelper/SpecGen/Generator/templates/event_src.template
+++ b/src/DDDHelper/SpecGen/Generator/templates/event_src.template
@@ -150,7 +150,7 @@ class %src_class% implements Event
 
     /**
      * @param array $array
-     * @return DomainEvent
+     * @return Event
      */
     public static function fromArray(array $array): Event
     {
