--- a/src/DDDHelper/SpecGen/Generator/templates/event_src.template
+++ b/src/DDDHelper/SpecGen/Generator/templates/event_src.template
@@ -46,7 +46,7 @@ class %src_class% implements Event
      */
     public static function raise(
         string $raisedBy,
-        string $entityId, %src_constructor_fields%
+        string $entityId%src_comma_prefixed_constructor_fields%
     ): self {
         $event = new static();
 
@@ -150,7 +150,7 @@ class %src_class% implements Event
 
     /**
      * @param array $array
-     * @return DomainEvent
+     * @return Event
      */
     public static function fromArray(array $array): Event
     {
