--- a/src/DDDHelper/SpecGen/Generator/templates/command_spec.template
+++ b/src/DDDHelper/SpecGen/Generator/templates/command_spec.template
@@ -31,7 +31,7 @@ class %spec_class% extends ObjectBehavior
     {
         $invoker->isEmpty()->shouldBeCalled()->willReturn(false);
         $this->beConstructedWith(
-            $this->expectedInvoker = $invoker, %spec_constructor_fields%
+            $this->expectedInvoker = $invoker%src_comma_prefixed_constructor_fields%
         );
     }
 
